# civitai-models-cli

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  civitai_model_manager.py  pyproject.toml  requirements.txt  run  run.bat  sample.env  setup.py  test_civitai_model_manager.py
ccm/: __init__.py  __main__.py  cli.py
ccm/config/: __init__.py
ccm/modules/: ai.py  details.py  download.py  helpers.py  list.py  remove.py  search.py  stats.py  tools.py  utils.py
civitai_models_manager/: __init__.py  __main__.py  cli.py
civitai_models_manager/config/: __init__.py
civitai_models_manager/modules/: ai.py  create.py  details.py  download.py  helpers.py  list.py  remove.py  search.py  stats.py  tools.py  utils.py
src/civitai_model_manager/: cli.py  helpers.py
src/civitai_model_manager/components/: details.py  helpers.py  list.py  stats.py  utils.py
src/civitai_model_manager/config/: __init__.py
tests/: test_main.py
