[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civitai-model-manager"
authors = [
    {name = "Regi E",email = "regi@bynine.io"}
]
keywords = ["civitai", "model", "manager", "cli", "ai", "ml", "machine learning", "artificial intelligence"]
version = "0.6.4"
description = "CLI tool for managing AI models from the CivitAI platform."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
   "Programming Language :: Python :: 3.11",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: OS Independent"
]
dependencies = [
   "typer",
   "rich",
   "requests",
   "shellingham",
   "html2text",
   "tqdm",
   "inquirer",
   "civitai",
   "python-dotenv",
   "questionary",
   "ollama",
   "openai",
   "groq"
]

[tool.setuptools]
packages = ["civitai_model_manager"]
package-dir = {"" = "src"}


[project.urls]
Repository = "https://github.com/regiellis/civitai-cli-manager"
Documentation = "https://github.com/regiellis/civitai-cli-manager/blob/main/README.md"
"Bug Tracker" = "https://github.com/regiellis/civitai-cli-manager/issues"

[project.scripts]
civitai-cli-manager = "civitai_model_manager.cli:main"

