[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccm"
authors = [
    {name = "Regi E",email = "regi@bynine.io"}
]
keywords = ["civitai", "model", "manager", "cli", "ai", "ml", "machine learning", "artificial intelligence"]
version = "0.6.6"
description = "CLI tool for managing AI models from the CivitAI platform."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
   "Programming Language :: Python :: 3.11",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: OS Independent"
]
dependencies = [
   "typer",
   "rich",
   "httpx",
   "shellingham",
   "html2text",
   "python-dotenv",
   "questionary",
   "ollama",
   "openai",
   "groq"
]

[tool.setuptools]
packages = ["ccm"]
package-dir = {"" = "ccm"}


[project.urls]
Repository = "https://github.com/regiellis/civitai-cli-manager"
Documentation = "https://github.com/regiellis/civitai-cli-manager/blob/main/README.md"
"Bug Tracker" = "https://github.com/regiellis/civitai-cli-manager/issues"

[project.scripts]
civitai-models = "ccm.__main__:main"

